--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^1.0.1",
+    "webpack": "^5.96.1"
   },
   "scripts": {
     "start": "react-scripts start",
